--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -4,12 +4,31 @@
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8"/>
-
+        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
 
-        <header th:fragment="header">
-            <h1>TechShop</h1>
+        <header th:fragment="header" class="header">
+
+            <nav class="nav">
+                <a th:href="@{/}" class="nav-link logo">TechShop</a>
+                <ul class="nav-menu">
+                    <li class="nav-menu-item">
+                        <a class="nav-link nav-menu-link" th:href="@{/cliente/listado}">Clientes</a>
+                    </li>
+
+                    <li class="nav-menu-item">
+                        <a class="nav-link nav-menu-link" th:href="@{/articulo/listado}">Articulo</a>
+                    </li>
+
+                    <li class="nav-menu-item">
+                        <a class="nav-link nav-menu-link" th:href="@{/categoria/listado}">Categorias</a>
+                    </li>
+
+                </ul>  
+            </nav>
+
+
         </header>
 
 
