--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -7,41 +7,45 @@
     <body>
         <header th:replace="layout/plantilla :: header"/>
 
+        <div class="contenido">
 
+            <div>Saludos</div>
 
-        <div>Saludos</div>
+            <h2>Informacion de un cliente</h2>
+            <a th:href="@{/cliente/nuevo}">Nuevo Cliente</a>
+            <a th:href="@{/cliente/buscar}">Buscador</a>
+            <div th:if="${clientes !=null and !clientes.empty}">
+                <table border="1">
+                    <thead>
+                        <tr>
+                            <th>nombre</th>
+                            <th>apellidos</th>
+                            <th>correo</th>
+                            <th>Telefono</th>
+                            <th>Limite</th>
+                            <th>Eliminar</th>
+                            <th>Modificar</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="cliente: ${clientes}">
+                            <td>[[${cliente.nombre}]]</td>
+                            <td>[[${cliente.apellidos}]]</td>
+                            <td>[[${cliente.correo}]]</td>
+                            <td>[[${cliente.telefono}]]</td>
+                            <td style="text-align: right">[[${#numbers.formatDecimal(cliente.credito.limite,3,2)}]]</td>
+                            <td><a th:href="@{/cliente/eliminar/}+ ${cliente.idCliente}">Eliminar</td>        
+                            <td><a th:href="@{/cliente/modificar/}+ ${cliente.idCliente}">Modificar</td> 
 
-        <h2>Informacion de un cliente</h2>
-        <a th:href="@{/cliente/nuevo}">Nuevo Cliente</a>
-        <div th:if="${clientes !=null and !clientes.empty}">
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>nombre</th>
-                        <th>apellidos</th>
-                        <th>correo</th>
-                        <th>Modificar</th>
-                        <th>Eliminar</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="cliente: ${clientes}">
-                        <td>[[${cliente.nombre}]]</td>
-                        <td>[[${cliente.apellidos}]]</td>
-                        <td>[[${cliente.correo}]]</td>
-                        <td>[[${cliente.telefono}]]</td>
-                        <td><a th:href="@{/modificarCliente/}+ ${cliente.idCliente}">Modificar</td>        
-                        <td><a th:href="@{/eliminarCliente/}+ ${cliente.idCliente}">Eliminar</td> 
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div>
+                <div th:if="${clientes ==null or clientes.empty}">
+                    <h2>No se tienen clientes que mostrar!</h2>
+                </div>
 
-                    </tr>
-                </tbody>
-            </table>
-
-        </div>
-        <div th:if="${clientes ==null or clientes.empty}">
-            <h2>No se tienen clientes que mostrar!</h2>
-        </div>
-
-        <footer th:replace="layout/plantilla :: footer"/>
-    </body>
-</html>
+                <footer th:replace="layout/plantilla :: footer"/>
+                </body>
+                </html>
