Semana 10 seguridad y bootstrap

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,31 +1,35 @@
-<html  xmlns:th="https://www.thymeleaf.org">
+<html  xmlns:th="https://www.thymeleaf.org"
+       xmlns="https://www.w3.org/1999/xhtml"
+       >
 
-    <head>
+    <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
+
     </head>
     <body>
         <header th:replace="layout/plantilla :: header" class="header"/>
 
         <div class="contenido">
 
-            <div>Saludos</div>
+            <h2>[[#{articulo.titulo}]]</h2>
 
-            <h2>Nuetros articulos articulos</h2>
+
+
 
             <div th:if="${articulos !=null and !articulos.empty}">
                 <table border="1">
                     <thead>
                         <tr>
-                            <th>Descripcion</th>
-                            <th>Precio</th>
+                            <th>[[#{articulo.descripcion}]]</th>
+                            <th>[[#{articulo.precio}]]</th>
+                            <th>[[#{articulo.comprar}]]</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr th:each="articulo: ${articulos}">
                             <td>[[${articulo.descripcion}]]</td>
                             <td style="text-align: right">[[${#numbers.formatDecimal(articulo.precio,3,2)}]]</td>
-                            <td><a th:href="@{/carrito/agregar/}+ ${articulo.idArticulo}">Comprar</td>        
+                            <td><a th:href="@{/carrito/agregar/}+ ${articulo.idArticulo}">[[#{articulo.comprar}]]</td>        
 
 
                         </tr>
@@ -34,7 +38,7 @@
 
             </div>
             <div th:if="${articulos ==null or articulos.empty}">
-                <h2>No se tienen articulos que mostrar!</h2>
+                <h2>[[#{articulo.no_mostrar}]]</h2>
             </div>
         </div>
         <footer th:replace="layout/plantilla :: footer" class="footer"/>
