--- a/src/main/resources/templates/articulo/listado.html
+++ b/src/main/resources/templates/articulo/listado.html
@@ -1,46 +1,45 @@
 <html  xmlns:th="https://www.thymeleaf.org">
 
-    <head>
+    <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
 
+        <link href="../../static/css/menu.css" rel="stylesheet" type="text/css"/>
+        <div class="contenido">
+            <div>Saludos</div>
 
+            <h2>Listado de clientese</h2>
+            <a th:href="@{/articulo/nuevo}">Nuevo Articulo</a>
+            <div th:if="${articulo !=null and !clientes.empty}">
+                <table border="1">
+                    <thead>
+                        <tr>
+                            <th>Descripcion</th>
+                            <th>Precio</th>
+                            <th>Existencias</th>
+                            <th>Activa</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="articulo ${articulos}">
+                            <td th:text="${articulo.descripcion}"></td>
+                            <td style="text-align: right">[[${#numbers.formatDecimal(articulo.precio.limite,3,2)}]]</td>
+                            <td th:text="${articulo.existencias}" style="text-align: center"></td>
+                            <td><input type="checkbox" name="activa" th:checked="${articulo.activo"disabled="true"></td>
+                            <td><a th:href="@{/articulo/eliminar/} + ${articulo.idArticulo}">Eliminar</a></td>
+                            <td><a th:href="@{/articulo/modificar/} + ${articulo.idArticulo}">modificar</a></td>
 
-        <div>Saludos</div>
+                        </tr>
+                    </tbody>
+                </table>
+                <div>
+                </div>
+                <div th:if="${articulos ==null or articulos.empty}">
+                    <h2>No se tienen clientes que mostrar!</h2>
+                </div>
 
-        <h2>Informacion de un cliente</h2>
-        <a th:href="@{/cliente/nuevo}">Nuevo Cliente</a>
-        <div th:if="${clientes !=null and !clientes.empty}">
-            <table border="1">
-                <thead>
-                    <tr>
-                        <th>nombre</th>
-                        <th>apellidos</th>
-                        <th>correo</th>
-                        <th>Modificar</th>
-                        <th>Eliminar</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="cliente: ${clientes}">
-                        <td>[[${cliente.nombre}]]</td>
-                        <td>[[${cliente.apellidos}]]</td>
-                        <td>[[${cliente.correo}]]</td>
-                        <td>[[${cliente.telefono}]]</td>
-                        <td><a th:href="@{/modificarCliente/}+ ${cliente.idCliente}">Modificar</td>        
-                        <td><a th:href="@{/eliminarCliente/}+ ${cliente.idCliente}">Eliminar</td> 
-
-                    </tr>
-                </tbody>
-            </table>
-
-        </div>
-        <div th:if="${clientes ==null or clientes.empty}">
-            <h2>No se tienen clientes que mostrar!</h2>
-        </div>
-
-        <footer th:replace="layout/plantilla :: footer"/>
-    </body>
-</html>
+                <footer th:replace="layout/plantilla :: footer"/>
+                </body>
+                </html>
