--- a/src/main/resources/templates/articulo/modificar.html
+++ b/src/main/resources/templates/articulo/modificar.html
@@ -1,46 +1,39 @@
 <html  xmlns:th="https://www.thymeleaf.org"
-       xmlns="https://www.w3.org/1999/xhtml"
-       >
-
-    <head>
+       xmlns="https://www.w3.org/1999/xhtml">
+    <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
+        <link href="../../static/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
-        <h1>Datos de Cliente</h1>
+        <div class="contenido">
+
+            <h2>Datos de cliente</h2>
 
 
-        <a th:href="@{/}">Regresar</a>
-        <hr/>
-        <form th:action="@{/cliente/guardar}"
-              method="post"
-              th:object="${cliente}">
-
-            <input type="hidden" name="idCliente" th:field="*{idCliente}"/>
-
-            <label for="nombre ">Nombre</label>
-            <input type="text" name="Nombre" th:field="*{nombre}"/>
-            <br/>
-
-
-            <label for="apellidos">Apellidos</label>
-            <input type="text" name="apellidos" th:field="*{apellidos}"/>
-            <br/>
-
-
-            <label for="correo">Correo</label>
-            <input type="email" name="crreo" th:field="*{correo}"/>
-            <br/>
-
-
-            <label for="telefono">Telefono</label>
-            <input type="tel" name="telefono" th:field="*{telefono}"/>
-            <br/>
-
-            <input type="submit" name="guardar" value="Guardar"/>
-
-        </form>
-
-        <footer th:replace="layout/plantilla :: footer"/>
-    </body>
-</html>
+            <a th:href="@{/articulo/listado}">Regresar</a>
+            <br><br/>
+                <form th:action="@{/articulo/guardar}" method="post" th:object="${articulo}">
+                    <input type="hidden" name="idArticulo" th:field="*{idArticulo}"/><br>
+                        <label for="categoria ">Categoria</label>
+                        <select th:field="*{idCategoria}">
+                            <option th:each="categoria: ${categorias}"
+                                    th:value="${categoria.idCategoria}"
+                                    th:text="${categoria.descripcion}"/>
+                        </select><br>
+                            <label for="descripcion">Descripcion</label>
+                            <input type="text" name="descripcion" th:field="*{descripcion}"/><br/>
+                            <label for="detalle">Detalle</label>
+                            <textArea name="detalle" th:field="*{detalle}" rows="6" cols="50"/><br>
+                                <label for="precio">Precio:</label>
+                                <input type="number" name="precio" th:field="*{precio}"/><br>
+                                    <label for="existencias">Existencias</label>
+                                    <input type="number" name="existencias" th:field="*{existencias}"/><br>
+                                        <label for="activo">Activo</label>
+                                        <input type="checkbox" name="activo" th:field="*{activo}"/><br>
+                                            <input type="submit" name="guardar" value="Guardar"/>
+                                            </form>
+                                            </div>
+                                            <footer th:replace="layout/plantilla :: footer"/>
+                                            </body>
+                                            </html>
