--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -1,46 +1,35 @@
 <html  xmlns:th="https://www.thymeleaf.org">
 
-    <head>
+    <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
-
-
-
         <div>Saludos</div>
-
         <h2>Informacion de un cliente</h2>
-        <a th:href="@{/cliente/nuevo}">Nuevo Cliente</a>
-        <div th:if="${clientes !=null and !clientes.empty}">
+        <a th:href="@{/categoria/nueva}">Nuevo Categoria</a>
+        <div th:if="${categorias !=null and !categorias.empty}">
             <table border="1">
                 <thead>
                     <tr>
-                        <th>nombre</th>
-                        <th>apellidos</th>
-                        <th>correo</th>
-                        <th>Modificar</th>
-                        <th>Eliminar</th>
+                        <th>Descripcion</th>
+                        <th>Activa</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr th:each="cliente: ${clientes}">
-                        <td>[[${cliente.nombre}]]</td>
-                        <td>[[${cliente.apellidos}]]</td>
-                        <td>[[${cliente.correo}]]</td>
-                        <td>[[${cliente.telefono}]]</td>
-                        <td><a th:href="@{/modificarCliente/}+ ${cliente.idCliente}">Modificar</td>        
-                        <td><a th:href="@{/eliminarCliente/}+ ${cliente.idCliente}">Eliminar</td> 
-
+                    <tr th:each="categoria: ${categorias}">
+                        <td th:text="${categoria.descripcion}"></td>
+                        <td><input type="checkbox" name="activa" th:checked="${categoria.activo}" disabled="true"></td>
+                        <td><a th:href="@{/categoria/modificar/} + ${categoria.idCategoria}">modificar</a></td>
+                        <td><a th:href="@{/categoria/eliminar/} + ${categoria.idCategoria}">Eliminar</a></td>
                     </tr>
                 </tbody>
             </table>
 
         </div>
-        <div th:if="${clientes ==null or clientes.empty}">
+        <div th:if="${categorias ==null or categorias.empty}">
             <h2>No se tienen clientes que mostrar!</h2>
         </div>
-
         <footer th:replace="layout/plantilla :: footer"/>
     </body>
 </html>
