--- a/src/main/resources/templates/categoria/modificar.html
+++ b/src/main/resources/templates/categoria/modificar.html
@@ -2,39 +2,30 @@
        xmlns="https://www.w3.org/1999/xhtml"
        >
 
-    <head>
+   <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
+        <link href="../../static/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
-        <h1>Datos de Cliente</h1>
+        <h1>Datos de Categoria</h1>
 
 
-        <a th:href="@{/}">Regresar</a>
+        <a th:href="@{/categoria/listado}">Regresar</a>
         <hr/>
-        <form th:action="@{/cliente/guardar}"
+        <form th:action="@{/categoria/guardar}"
               method="post"
-              th:object="${cliente}">
+              th:object="${categoria}">
 
-            <input type="hidden" name="idCliente" th:field="*{idCliente}"/>
+            <input type="hidden" name="idCategoria" th:field="*{idCategoria}"/>
 
-            <label for="nombre ">Nombre</label>
-            <input type="text" name="Nombre" th:field="*{nombre}"/>
+            <label for="descripcion ">Descripcion</label>
+            <input type="text" name="descripcion" th:field="*{descripcion}"/>
             <br/>
 
 
-            <label for="apellidos">Apellidos</label>
-            <input type="text" name="apellidos" th:field="*{apellidos}"/>
-            <br/>
-
-
-            <label for="correo">Correo</label>
-            <input type="email" name="crreo" th:field="*{correo}"/>
-            <br/>
-
-
-            <label for="telefono">Telefono</label>
-            <input type="tel" name="telefono" th:field="*{telefono}"/>
+            <label for="activo">Activo</label>
+            <input type="checkbox" name="activo" th:field="*{activo}"/>
             <br/>
 
             <input type="submit" name="guardar" value="Guardar"/>
