--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -1,6 +1,6 @@
 <html  xmlns:th="https://www.thymeleaf.org">
 
-    <head>
+    <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
         <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
@@ -9,22 +9,20 @@
 
         <div class="contenido">
 
-            <div>Saludos</div>
-
-            <h2>Informacion de un cliente</h2>
-            <a th:href="@{/cliente/nuevo}">Nuevo Cliente</a>
+            <h2>[[#{cliente.titulo}]]</h2>
+            <a th:href="@{/cliente/nuevo}">[[#{cliente.nuevo}]]</a>
             <a th:href="@{/cliente/buscar}">Buscador</a>
             <div th:if="${clientes !=null and !clientes.empty}">
                 <table border="1">
                     <thead>
                         <tr>
-                            <th>nombre</th>
-                            <th>apellidos</th>
-                            <th>correo</th>
-                            <th>Telefono</th>
-                            <th>Limite</th>
-                            <th>Eliminar</th>
-                            <th>Modificar</th>
+                            <th>[[#{cliente.nombre}]]</th>
+                            <th>[[#{cliente.apellidos}]]</th>
+                            <th>[[#{cliente.correo}]]</th>
+                            <th>[[#{cliente.telefono}]]</th>
+                            <th>[[#{cliente.limite}]]</th>
+                            <th>[[#{accion.eliminar}]]</th>
+                            <th>[[#{accion.actualizar}]]</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -34,8 +32,8 @@
                             <td>[[${cliente.correo}]]</td>
                             <td>[[${cliente.telefono}]]</td>
                             <td style="text-align: right">[[${#numbers.formatDecimal(cliente.credito.limite,3,2)}]]</td>
-                            <td><a th:href="@{/cliente/eliminar/}+ ${cliente.idCliente}">Eliminar</td>        
-                            <td><a th:href="@{/cliente/modificar/}+ ${cliente.idCliente}">Modificar</td> 
+                            <td><a th:href="@{/cliente/eliminar/}+ ${cliente.idCliente}">[[#{accion.eliminar}]]</td>        
+                            <td><a th:href="@{/cliente/modificar/}+ ${cliente.idCliente}">[[#{accion.actualizar}]]</td> 
 
                         </tr>
                     </tbody>
@@ -43,7 +41,7 @@
             </div>
             <div>
                 <div th:if="${clientes ==null or clientes.empty}">
-                    <h2>No se tienen clientes que mostrar!</h2>
+                    <h2>[[#{cliente.no_mostrar}]]</h2>
                 </div>
 
                 <footer th:replace="layout/plantilla :: footer"/>
