--- a/src/main/resources/templates/cliente/modificar.html
+++ b/src/main/resources/templates/cliente/modificar.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
-        <h1>Datos de Cliente</h1>
+        <h2>[[#{cliente.datos}]]</h2>
 
         <div class="contenido">
-            <a th:href="@{/cliente/listado}">Regresar</a>
+            <a th:href="@{/cliente/listado}">[[#{accion.regresar}]]</a>
             <hr/>
             <form th:action="@{/cliente/guardar}"
                   method="post"
@@ -19,30 +19,30 @@
 
                 <input type="hidden" name="idCliente" th:field="*{idCliente}"/>
 
-                <label for="nombre ">Nombre</label>
+                <label for="nombre ">[[#{cliente.nombre}]]</label>
                 <input type="text" name="Nombre" th:field="*{nombre}"/>
                 <br/>
 
 
-                <label for="apellidos">Apellidos</label>
+                <label for="apellidos">[[#{cliente.apellidos}]]</label>
                 <input type="text" name="apellidos" th:field="*{apellidos}"/>
                 <br/>
 
 
-                <label for="correo">Correo</label>
+                <label for="correo">[[#{cliente.correo}]]</label>
                 <input type="email" name="crreo" th:field="*{correo}"/>
                 <br/>
 
 
-                <label for="telefono">Telefono</label>
+                <label for="telefono">[[#{cliente.telefono}]]</label>
                 <input type="tel" name="telefono" th:field="*{telefono}"/>
                 <br/>
 
-                <label for="limite">Limite de credito</label>
+                <label for="limite">[[#{cliente.limite}]]</label>
                 <input type="number" name="limite" th:field="*{credito.limite}"/>
                 <br/>
 
-                <input type="submit" name="guardar" value="Guardar"/>
+                <button type="submit" th:text="#{accion.guardar}"/>
         </div>
         </form>
 
