--- a/src/main/resources/templates/articulo/modificar.html
+++ b/src/main/resources/templates/articulo/modificar.html
@@ -1,5 +1,6 @@
 <html  xmlns:th="https://www.thymeleaf.org"
-       xmlns="https://www.w3.org/1999/xhtml">
+       xmlns="https://www.w3.org/1999/xhtml"
+       xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
     <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
         <link href="../../static/css/menu.css" rel="stylesheet" type="text/css"/>
