--- a/src/main/resources/templates/cliente/busqueda.html
+++ b/src/main/resources/templates/cliente/busqueda.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html
     xmlns:th="http://www.thymeleaf.org"
-    xmlns="http://www.w3.org/1999/xhtml">
+    xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8">
