--- a/src/main/resources/templates/articulo/listado.html
+++ b/src/main/resources/templates/articulo/listado.html
@@ -1,4 +1,5 @@
-<html  xmlns:th="https://www.thymeleaf.org">
+<html  xmlns:th="https://www.thymeleaf.org"
+       xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
 
     <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
