--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -1,49 +1,15 @@
-<html  xmlns:th="https://www.thymeleaf.org">
+<html  xmlns:th="https://www.thymeleaf.org"
+       xmlns:sec="https://www.thymeleaf.org/extras/spring-security">
 
     <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
-
-        <div class="contenido">
-
-            <h2>[[#{cliente.titulo}]]</h2>
-            <a th:href="@{/cliente/nuevo}">[[#{cliente.nuevo}]]</a>
-            <a th:href="@{/cliente/buscar}">Buscador</a>
-            <div th:if="${clientes !=null and !clientes.empty}">
-                <table border="1">
-                    <thead>
-                        <tr>
-                            <th>[[#{cliente.nombre}]]</th>
-                            <th>[[#{cliente.apellidos}]]</th>
-                            <th>[[#{cliente.correo}]]</th>
-                            <th>[[#{cliente.telefono}]]</th>
-                            <th>[[#{cliente.limite}]]</th>
-                            <th>[[#{accion.eliminar}]]</th>
-                            <th>[[#{accion.actualizar}]]</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr th:each="cliente: ${clientes}">
-                            <td>[[${cliente.nombre}]]</td>
-                            <td>[[${cliente.apellidos}]]</td>
-                            <td>[[${cliente.correo}]]</td>
-                            <td>[[${cliente.telefono}]]</td>
-                            <td style="text-align: right">[[${#numbers.formatDecimal(cliente.credito.limite,3,2)}]]</td>
-                            <td><a th:href="@{/cliente/eliminar/}+ ${cliente.idCliente}">[[#{accion.eliminar}]]</td>        
-                            <td><a th:href="@{/cliente/modificar/}+ ${cliente.idCliente}">[[#{accion.actualizar}]]</td> 
-
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <div>
-                <div th:if="${clientes ==null or clientes.empty}">
-                    <h2>[[#{cliente.no_mostrar}]]</h2>
-                </div>
-
-                <footer th:replace="layout/plantilla :: footer"/>
-                </body>
-                </html>
+        <section th:replace="cliente/fragmentosCliente :: botonesAgregar"/>
+          <section th:replace="cliente/fragmentosCliente :: agregarCliente"/>
+          <section th:replace="cliente/fragmentosCliente :: listadoClientes"/>
+  
+        <footer th:replace="layout/plantilla :: footer"/>
+    </body>
+</html>
